--- a/.github/workflows/cloudbuild.yml
+++ b/.github/workflows/cloudbuild.yml
@@ -1,9 +1,11 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/workspace-automation-466800/my-app', '.']
+  args: ['build', '-t', 'gcr.io/workspace-automation-466800/automation-api:v1', '.']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/workspace-automation-466800/my-app']
+  args: ['push', 'gcr.io/workspace-automation-466800/automation-api:v1']
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   args: ['app', 'deploy', 'app.yaml']
+  env:
+  - 'PROJECT_ID=workspace-automation-dev'
 images:
-- 'gcr.io/workspace-automation-466800/my-app'
+- 'gcr.io/workspace-automation-466800/automation-api:v1'
