Normalize Snyk CLI flags across security workflows
- Remove mutually-exclusive --project-name flag from all workflows
- Keep --all-projects flag consistently across all Snyk commands
- Use recommended baseline: snyk test --all-projects --severity-threshold=high
- Update snyk monitor to use --all-projects only
- Standardize severity threshold to 'high' across workflows

--- a/.github/workflows/snyk-pr-checks.yml
+++ b/.github/workflows/snyk-pr-checks.yml
@@ -40,6 +40,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: >
+            --all-projects
             --severity-threshold=high
             --fail-on=all
             --org=${{ secrets.SNYK_ORG_ID }}
@@ -220,5 +221,5 @@ jobs:
             npm ci
             
             # Run Snyk test specifically for new dependencies
-            npx snyk test --severity-threshold=medium --fail-on=all
+            npx snyk test --all-projects --severity-threshold=high --fail-on=all
           fi
