--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
     - name: Run Cloud Build
-      run: gcloud builds submit --tag gcr.io/workspace-automation-466800/automation-api:v1
+      run: gcloud builds submit --config cloudbuild.yaml
