fix: resolve YAML syntax errors in workflows
- Fixed manual-status-management.yml line 115 variable syntax
- Fixed snyk-security.yml line 120 HERE document JSON conflicts
- Standardized variable access patterns
- Replaced inline JSON with template approach to avoid YAML parsing issues

All workflow files should now pass YAML validation

--- a/.github/workflows/manual-status-management.yml
+++ b/.github/workflows/manual-status-management.yml
@@ -140,6 +140,7 @@ EOF
         DESCRIPTION="${{ inputs.description }}"
         CONTEXT="${{ inputs.context }}"
         REPO="${{ inputs.repo || github.repository }}"
+        TARGET_URL="${{ inputs.target_url }}"
         
         echo "Updating PR #$PR_NUMBER status"
         
@@ -163,8 +164,8 @@ EOF
         )
         
         # Add target_url if provided
-        if [ -n "${{ inputs.target_url }}" ]; then
-          API_DATA=$(echo "$API_DATA" | jq --arg url "${{ inputs.target_url }}" '. + {"target_url": $url}')
+        if [ -n "$TARGET_URL" ]; then
+          API_DATA=$(echo "$API_DATA" | jq --arg url "$TARGET_URL" '. + {"target_url": $url}')
         fi
         
         echo "$API_DATA" | gh api \
