--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,27 +16,73 @@ steps:
       - '-c'
       - |
         echo "Setting up clasp credentials..."
+        mkdir -p ~/.config/@google/clasp
         gcloud secrets versions access latest --secret="clasp-credentials" --project="$PROJECT_ID" > ~/.clasprc.json
         chmod 600 ~/.clasprc.json
+        ls -la ~/.clasprc.json
+        echo "Credentials set up successfully"
     env:
       - 'PROJECT_ID=workspace-automation-466800'
       
-  # Push changes to Apps Script projects
+  # Deploy to all Apps Script projects
   - name: 'node:18'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        echo "Pushing changes to Apps Script projects..."
-        chmod +x ./tools/git-sync.sh
-        BASE_SHA="${_BASE_SHA}" HEAD_SHA="${_HEAD_SHA}" ./tools/git-sync.sh push
+        echo "Deploying to Google Apps Script projects..."
+        
+        # List of project directories to deploy
+        PROJECTS=(
+          "projects/calendar"
+          "projects/chat" 
+          "projects/docs"
+          "projects/drive"
+          "projects/gmail"
+          "projects/photos"
+          "projects/sheets"
+          "projects/slides"
+          "projects/tasks"
+          "projects/utility"
+        )
+        
+        SUCCESS_COUNT=0
+        FAILED_PROJECTS=""
+        
+        for PROJECT_DIR in "${PROJECTS[@]}"; do
+          if [ -d "$PROJECT_DIR" ] && [ -f "$PROJECT_DIR/.clasp.json" ]; then
+            echo "📦 Deploying $PROJECT_DIR..."
+            cd "$PROJECT_DIR"
+            
+            if clasp push --force; then
+              echo "✅ Successfully deployed $PROJECT_DIR"
+              SUCCESS_COUNT=$((SUCCESS_COUNT + 1))
+            else
+              echo "❌ Failed to deploy $PROJECT_DIR"
+              FAILED_PROJECTS="$FAILED_PROJECTS $PROJECT_DIR"
+            fi
+            
+            cd - > /dev/null
+          else
+            echo "⚠️ Skipping $PROJECT_DIR (no .clasp.json found)"
+          fi
+        done
+        
+        echo "================================================"
+        echo "Deployment Summary:"
+        echo "✅ Successful deployments: $SUCCESS_COUNT"
+        if [ -n "$FAILED_PROJECTS" ]; then
+          echo "❌ Failed deployments:$FAILED_PROJECTS"
+          echo "================================================"
+          exit 1
+        else
+          echo "🎉 All deployments completed successfully!"
+          echo "================================================"
+        fi
     env:
       - 'PROJECT_ID=workspace-automation-466800'
-
-substitutions:
-  _BASE_SHA: 'HEAD~1'
-  _HEAD_SHA: 'HEAD'
 
 options:
   substitution_option: 'ALLOW_LOOSE'
   logging: CLOUD_LOGGING_ONLY
+  machineType: 'E2_HIGHCPU_8'
