--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,9 +13,9 @@ steps:
         echo "🚀 Google Apps Script Deployment Pipeline"
         echo "========================================"
         
-        # Step 0: Install Node.js and npm in the Cloud SDK container
+        # Step 0: Install Node.js and npm with sudo for permissions
         echo "📦 Installing Node.js and npm..."
-        apt-get update && apt-get install -y nodejs npm
+        sudo apt-get update && sudo apt-get install -y nodejs npm
         echo "✅ Node.js installed: $$(node --version)"
         echo "✅ npm installed: $$(npm --version)"
         
