Add smart formatter, batch refactoring tools, shell script catalog, and comprehensive documentation

--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "lint:fix": "node automation/dev-tools/gas-linter.js --fix --all",
     "format": "node automation/dev-tools/gas-formatter.js",
     "format:all": "node automation/dev-tools/gas-formatter.js --all",
+    "format:smart": "node automation/dev-tools/gas-formatter-smart.js",
+    "format:smart:all": "node automation/dev-tools/gas-formatter-smart.js --all",
+    "refactor:batch": "node automation/dev-tools/gas-refactor-batch.js",
     "catalog": "node automation/dev-tools/gas-catalog.js",
     "catalog:update": "node automation/dev-tools/gas-catalog.js",
     "catalog:watch": "node automation/dev-tools/gas-catalog.js --watch",
