feat: Add external GAS project migration tools
- Created comprehensive migration plan documentation
- Added gas-project-discovery.js to find external projects
- Added gas-project-downloader.js to download projects
- Added gas-project-migrator.js to process and migrate
- Added gas-project-archiver.js for safe deletion
- Updated package.json with new npm commands:
  - npm run gas:discover
  - npm run gas:download:all
  - npm run gas:migrate:all
  - npm run gas:delete SCRIPT_ID 'Project Name'

The migration process:
1. Discover external projects not in repo
2. Download with automatic backup
3. Analyze and categorize by service
4. Apply formatting standards
5. Migrate to appropriate service directory
6. Verify and test
7. Safely archive and delete originals

--- a/package.json
+++ b/package.json
@@ -60,7 +60,14 @@
     "shell:catalog": "node automation/dev-tools/shell-catalog.js",
     "shell:catalog:watch": "node automation/dev-tools/shell-catalog.js --watch",
     "shell:catalog:json": "node automation/dev-tools/shell-catalog.js --json",
-    "catalog:all": "npm run catalog && npm run shell:catalog"
+    "catalog:all": "npm run catalog && npm run shell:catalog",
+    "gas:discover": "node automation/dev-tools/gas-project-discovery.js",
+    "gas:download": "node automation/dev-tools/gas-project-downloader.js",
+    "gas:download:all": "node automation/dev-tools/gas-project-downloader.js --all",
+    "gas:migrate": "node automation/dev-tools/gas-project-migrator.js",
+    "gas:migrate:all": "node automation/dev-tools/gas-project-migrator.js --all",
+    "gas:delete": "node automation/dev-tools/gas-project-archiver.js",
+    "gas:delete:report": "node automation/dev-tools/gas-project-archiver.js --report"
   },
   "repository": {
     "type": "git",
