feat: Add txt conversion and duplicate detection tools
- Added gas-txt-converter.js to process raw text files
  - Converts .txt files to .gs format
  - Detects service type from content
  - Preserves existing headers and metadata
  - Generates conversion report

- Added gas-duplicate-detector.js for comprehensive duplicate analysis
  - Scans all script locations (apps/, txt files, temp/)
  - Finds exact duplicates by content hash
  - Detects similar scripts (>90% similarity)
  - Identifies name collisions
  - Finds functional duplicates
  - Calculates potential space savings

- Updated migration plan to include txt file processing
- Enhanced migrator to handle converted scripts
- Added npm commands:
  - npm run gas:convert:txt
  - npm run gas:duplicates

The workflow now supports:
1. Converting raw txt files to proper .gs format
2. Detecting duplicates across entire codebase
3. Migrating both downloaded and converted scripts

--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "gas:migrate": "node automation/dev-tools/gas-project-migrator.js",
     "gas:migrate:all": "node automation/dev-tools/gas-project-migrator.js --all",
     "gas:delete": "node automation/dev-tools/gas-project-archiver.js",
-    "gas:delete:report": "node automation/dev-tools/gas-project-archiver.js --report"
+    "gas:delete:report": "node automation/dev-tools/gas-project-archiver.js --report",
+    "gas:convert:txt": "node automation/dev-tools/gas-txt-converter.js",
+    "gas:duplicates": "node automation/dev-tools/gas-duplicate-detector.js"
   },
   "repository": {
     "type": "git",
