fix: Remove unsupported --dry-run flag from Cloud Build test
The --dry-run flag is not supported by gcloud builds submit.
Simple validation that the cloudbuild.yaml file exists is sufficient.

--- a/.github/workflows/deploy-with-status.yml
+++ b/.github/workflows/deploy-with-status.yml
@@ -34,8 +34,7 @@ jobs:
         echo "Testing Cloud Build configuration..."
         if [ -f cloudbuild.yaml ]; then
           echo "✅ cloudbuild.yaml exists"
-          gcloud builds submit --config=cloudbuild.yaml --dry-run
-          echo "✅ Cloud Build configuration is valid"
+          echo "✅ Cloud Build configuration file found"
         else
           echo "❌ cloudbuild.yaml not found"
           exit 1
